--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     
     </div>
     <div class="copyright text-center">
-    Все права защищены © 2022 <span>Your Template Name</span>
+    Все права защищены © 2022
     </div>
   </footer>
