--- a/mno.html
+++ b/mno.html
@@ -47,6 +47,6 @@
   
   </div>
   <div class="copyright text-center">
-  Все права защищены © 2022 <span>Your Template Name</span>
+  Все права защищены © 2022
   </div>
 </footer>
