--- a/vek.html
+++ b/vek.html
@@ -46,6 +46,6 @@
     
     </div>
     <div class="copyright text-center">
-    Все права защищены © 2022 <span>Your Template Name</span>
+    Все права защищены © 2022
     </div>
   </footer>
